--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,15 +4,21 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: maven:3.9.2-jdk-21
-    working_directory: ~/project
+      - image: maven:3.9.1-eclipse-temurin-21  # Imagen Maven + JDK 21 válida
+    working_directory: ~/proyectoprogram2
     steps:
-      - checkout
+      - checkout  # Clona tu repositorio
       - run:
-          name: Build with Maven
-          command: mvn clean package
+          name: Compile project
+          command: mvn clean compile
+      - run:
+          name: Run tests
+          command: mvn test
+      - run:
+          name: Package project
+          command: mvn package
 
 workflows:
-  build_workflow:
+  build_and_test:
     jobs:
       - build
