--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,8 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: maven:3.9.2-eclipse-temurin-21  # Imagen válida de Maven + JDK
-    working_directory: ~/proyectoprogram2
+      - image: maven:3.9.0-jdk-21  # Imagen válida de Maven + JDK
+    working_directory: ~/repo
     steps:
       - checkout
       - run:
