--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,19 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: maven:3.9.0-jdk-21  # Imagen válida de Maven + JDK
-    working_directory: ~/repo
+      - image: maven:3.9.0-eclipse-temurin-21
+    working_directory: ~/proyectoprogram2
     steps:
       - checkout
       - run:
-          name: Build with Maven
+          name: Build con Maven
           command: mvn clean package
+      - run:
+          name: Mostrar JAR generado
+          command: ls -l target
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
