--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,12 @@
-# .circleci/config.yml
 version: 2.1
 
 jobs:
   build:
     docker:
-      - image: maven:3.9.0-eclipse-temurin-21
+      - image: maven:3.8.8-eclipse-temurin-17  # Imagen verificada
     working_directory: ~/proyectoprogram2
     steps:
       - checkout
       - run:
-          name: Build con Maven
+          name: Build with Maven
           command: mvn clean package
-      - run:
-          name: Mostrar JAR generado
-          command: ls -l target
-
-workflows:
-  version: 2
-  build_and_test:
-    jobs:
-      - build
